--- a/index.html
+++ b/index.html
@@ -8,7 +8,39 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+<style>
+h2 {
+    font-family: 'Playfair Display', serif;
+}
+table, th, td {
+    border: 1px solid black;
+}
 
+table {
+    border-collapse: collapse;
+    margin: auto;
+    width: 100%; 
+}
+
+th, td {
+    padding: 10px;
+    text-align: center;
+    width: 120px;
+}
+
+th {
+    font-weight: bold;
+}
+
+tr:nth-child(even) {
+    background-color: #DCEBE6;
+}
+
+tr:hover:nth-child(1n + 2) {
+    background-color: #085F63;
+    color: #fff;
+}
+</style>
 <body>
     <div class="container mt-3">
         <div class="row">
